Add integration tests

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,3 +16,5 @@ azure.storage.container.name=images
 azure.storage.sas.expiration=30
 # eureka
 eureka.client.enabled=false
+# test
+spring.main.banner-mode=off
